--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                 <splitViewController id="Sii-pR-frU" sceneMemberID="viewController">
                     <connections>
                         <segue destination="txY-Vr-XYt" kind="relationship" relationship="detailViewController" id="Uvi-cM-tAi"/>
-                        <segue destination="JK3-yX-CTk" kind="relationship" relationship="masterViewController" id="FuD-yE-3Mo"/>
+                        <segue destination="bez-we-P2Z" kind="relationship" relationship="masterViewController" id="FuD-yE-3Mo"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gHJ-pU-s1Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -90,10 +90,19 @@
                             <outlet property="delegate" destination="JK3-yX-CTk" id="HCO-RJ-A9P"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="91f-Te-Cw8">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dc9-AJ-1FW">
+                            <connections>
+                                <action selector="addButtonTouched:" destination="JK3-yX-CTk" id="2gJ-fF-ZSK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fEB-V2-aCg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="179" y="951"/>
+            <point key="canvasLocation" x="959" y="951"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7VE-1o-QFo">
@@ -112,6 +121,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rv5-rn-oEN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="179" y="110"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9A0-CK-yao">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bez-we-P2Z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Gqp-8w-mjh">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JK3-yX-CTk" kind="relationship" relationship="rootViewController" id="kLX-R1-FqJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zcx-X9-61J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="178.7109375" y="950.78125"/>
         </scene>
     </scenes>
 </document>
